kernel/REPAIR_REPORT.txt
MISSING authority_result.py : dataclasses
MISSING concept_record.py : dataclasses
MISSING config.py : pathlib
MISSING constitutional_registry.py : dataclasses
MISSING constitutional_registry.py : typing
MISSING constitutional_registry.py : types
MISSING derivation_node.py : dataclasses
MISSING derivation_node.py : typing
MISSING repository_descriptor.py : dataclasses
MISSING repository_loader.py : sqlite3
MISSING validation_result.py : dataclasses
MISSING validation_result.py : typing
MISSING constitutional/u_activation_scheduler.py : collections
MISSING constitutional/u_constitutional_behavior.py : abc
MISSING constitutional/u_constitutional_dynamics.py : kernel.constitutional.u_constitutional_model
MISSING constitutional/u_constitutional_executor.py : kernel.constitutional.u_actualization
MISSING constitutional/u_constitutional_model_builder.py : kernel.constitutional.u_constitutional_model
MISSING constitutional/u_constitutional_query.py : collections
MISSING constitutional/u_constitutional_state.py : dataclasses
MISSING constitutional/u_constitutional_state.py : typing
MISSING constitutional/u_constitutional_state.py : kernel.constitutional.u_constitutional_profile
MISSING constitutional/u_constitutional_transition_validator.py : dataclasses
MISSING semantic/u_canonical_recognition_engine.py : typing
MISSING semantic/u_canonical_recognition_engine.py : kernel.semantic.u_semantic_span
MISSING semantic/u_canonical_semantic_object.py : dataclasses
MISSING semantic/u_canonical_semantic_object.py : typing
MISSING semantic/u_canonical_semantic_proposition.py : dataclasses
MISSING semantic/u_canonical_semantic_proposition.py : typing
MISSING semantic/u_canonical_semantic_proposition.py : kernel.semantic.u_canonical_context
MISSING semantic/u_canonical_semantic_relation.py : dataclasses
MISSING semantic/u_canonical_semantic_relation.py : typing
MISSING semantic/u_semantic_classifier.py : enum
MISSING semantic/u_semantic_document.py : dataclasses
MISSING semantic/u_semantic_document.py : typing
MISSING semantic/u_semantic_edge.py : dataclasses
MISSING semantic/u_semantic_edge.py : typing
MISSING semantic/u_semantic_edge.py : kernel.semantic.u_semantic_relation
MISSING semantic/u_semantic_edge.py : kernel.semantic.u_semantic_node
MISSING semantic/u_semantic_graph_builder.py : kernel.semantic.u_semantic_graph
MISSING semantic/u_semantic_network.py : collections
MISSING semantic/u_semantic_network.py : kernel.semantic.u_semantic_node
MISSING semantic/u_semantic_reducer.py : kernel.semantic.u_canonical_context
MISSING semantic/u_semantic_role_resolver.py : enum
MISSING semantic/u_semantic_span_detector.py : dataclasses
MISSING semantic/u_semantic_span_detector.py : typing
MISSING tetrahedron/u_activation.py : dataclasses
MISSING tetrahedron/u_activation.py : typing
MISSING tetrahedron/u_edge.py : dataclasses
MISSING tetrahedron/u_event.py : dataclasses
MISSING tetrahedron/u_event.py : datetime
MISSING tetrahedron/u_event.py : typing
MISSING tetrahedron/u_face.py : dataclasses
MISSING tetrahedron/u_face.py : typing
MISSING tetrahedron/u_governance.py : dataclasses
MISSING tetrahedron/u_governance.py : enum
MISSING tetrahedron/u_instruction.py : enum
MISSING tetrahedron/u_instruction.py : dataclasses
MISSING tetrahedron/u_instruction.py : typing
MISSING tetrahedron/u_law.py : dataclasses
MISSING tetrahedron/u_law.py : abc
MISSING tetrahedron/u_mapper.py : dataclasses
MISSING tetrahedron/u_metamodel.py : enum
MISSING tetrahedron/u_metamodel.py : dataclasses
MISSING tetrahedron/u_primitive.py : __future__
MISSING tetrahedron/u_primitive.py : dataclasses
MISSING tetrahedron/u_primitive.py : typing
MISSING tetrahedron/u_proposition.py : dataclasses
MISSING tetrahedron/u_proposition.py : typing
MISSING tetrahedron/u_state.py : dataclasses
MISSING tetrahedron/u_state.py : typing
MISSING tetrahedron/u_tetrahedron.py : dataclasses
MISSING tetrahedron/u_tetrahedron.py : typing
MISSING tetrahedron/u_trace.py : dataclasses
MISSING tetrahedron/u_trace.py : typing
MISSING tetrahedron/u_transaction.py : dataclasses
MISSING tetrahedron/u_transaction.py : datetime
MISSING tetrahedron/u_transaction.py : typing
COMPILE ERROR constitutional_reasoner.py
  File "/media/external_drive/llm/pretace/kernel/constitutional_reasoner.py", line 3
    def contains(...)
                 ^^^
SyntaxError: invalid syntax
